--- a/downloads/index.html
+++ b/downloads/index.html
@@ -99,7 +99,7 @@ GitHub
 <p class=b>What's on this Page</p><nav id=TableOfContents>
 <ul>
 <li><a href=#centos7环境完整安装包>CentOS7环境完整安装包</a></li><li><a href=#vmware虚拟机镜像>Vmware虚拟机镜像</a></li><li><a href=#github-releases>Github Releases</a></li><li><a href=#gitee-releases>Gitee Releases</a></li><li><a href=#联系反馈>联系反馈</a></li></ul></nav><div date-pref>
-<a href=https://abyssalfish-os.github.io/documentation/ class="dib f6 pl1 hover-bg-light-gray br-100" title="流影相关文档 "><svg class="fill-current" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+<a href=https://abyssalfish-os.github.io/qa/ class="dib f6 pl1 hover-bg-light-gray br-100" title="常见问题 "><svg class="fill-current" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
 </a>
 <a href=https://abyssalfish-os.github.io/demo/ class="dib f6 pr1 hover-bg-light-gray br-100" title=Demo演示><svg class="fill-current" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
 </a>
@@ -239,17 +239,15 @@ DOWNLOADS
 </a>
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-流量镜像接入
+流量接入
 </a>
 </li><li class="f6 fw4">
 <a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-功能支持说明
-</a>
-</li><li class="f6 fw4">
-<a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-常见问题QA
+功能列表
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
+<a href=/qa/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.qa>常见问题</a>
+</li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
 </li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8 mb1 bb b--moon-gray">
 <a href=javascript:void(0) class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.contribute>欢迎贡献</a>
@@ -334,6 +332,10 @@ GitHub
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/other/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
 其它资料
+</a>
+</li><li class="tl dib ma0 hover-bg-black w-100">
+<a href=/qa/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
+常见问题
 </a>
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/demo/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
