--- a/other/index.html
+++ b/other/index.html
@@ -198,17 +198,15 @@ GitHub
 </a>
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-流量镜像接入
+流量接入
 </a>
 </li><li class="f6 fw4">
 <a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-功能支持说明
-</a>
-</li><li class="f6 fw4">
-<a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-常见问题QA
+功能列表
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
+<a href=/qa/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.qa>常见问题</a>
+</li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
 </li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8 mb1 bb b--moon-gray">
 <a href=javascript:void(0) class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.contribute>欢迎贡献</a>
@@ -239,15 +237,6 @@ GitHub
 </h1><div class="lh-copy links">
 以ESXi环境下流量接入配置为例，说明如何接入外部或内部的流量
 <a href=/other/development/ class="f6 mt2 db link primary-color dim">
-Read More &#187;
-</a>
-</div></div></div><div class="relative flex-auto w-100 w-40-l mr3 mb3 bg-white ba b--moon-gray nested-copy-line-height weight-20">
-<div class="bg-white mb2 pa3 pa4-l gray">
-<h1 class="near-black f3">
-<a href=/other/faq/ class="link primary-color dim">常见问题</a>
-</h1><div class="lh-copy links">
-安装、使用中问题与解答.
-<a href=/other/faq/ class="f6 mt2 db link primary-color dim">
 Read More &#187;
 </a>
 </div></div></div><div class="relative flex-auto w-100 w-40-l mr3 mb3 bg-white ba b--moon-gray nested-copy-line-height weight-30">
@@ -322,6 +311,10 @@ GitHub
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/other/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
 其它资料
+</a>
+</li><li class="tl dib ma0 hover-bg-black w-100">
+<a href=/qa/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
+常见问题
 </a>
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/demo/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
