--- a/user-manual/zhuizong/index.html
+++ b/user-manual/zhuizong/index.html
@@ -231,17 +231,15 @@ FUNDAMENTALS
 </a>
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-流量镜像接入
+流量接入
 </a>
 </li><li class="f6 fw4">
 <a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-功能支持说明
-</a>
-</li><li class="f6 fw4">
-<a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-常见问题QA
+功能列表
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
+<a href=/qa/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.qa>常见问题</a>
+</li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
 </li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8 mb1 bb b--moon-gray">
 <a href=javascript:void(0) class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.contribute>欢迎贡献</a>
@@ -326,6 +324,10 @@ GitHub
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/other/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
 其它资料
+</a>
+</li><li class="tl dib ma0 hover-bg-black w-100">
+<a href=/qa/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
+常见问题
 </a>
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/demo/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
