--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@ GitHub
 <div class="flex-ns flex-wrap center mw9">
 <div class="w-100 w-50-l order-0">
 <div class="w-90-ns center">
-<a href=http://101.254.236.75:14180/ui/ class="link black dim">
-<img src=/img/login.png alt="image depicting an example of 流影" class="img shadow-5">
+<a href=http://119.80.10.68:14180/ui/ class="link black dim">
+<img src=/img/login.png alt="image depicting an example of 流影在线演示" class="img shadow-5">
 </a>
 </div></div><div class="w-100 w-50-l">
 <div class="w-80-ns center tc">
-<h3 class="f1 fw4 black ma0 pt4 lh-title pt0-l">流影</h3><p class="f3 lh-copy">
-流影在线演示环境，便于您快速上手操作，马上体验流影功能。体验账号demo，密码demo@2022
+<h3 class="f1 fw4 black ma0 pt4 lh-title pt0-l">流影在线演示</h3><p class="f3 lh-copy">
+登录账号demo，密码demo@2022。即刻开启流影体验。
 </p><p class="f4 lh-copy nested-linksTK">
-<a href=http://101.254.236.75:14180/ui/ class="link black dim">
-点击访问流影DEMO<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" viewBox="0 0 32 32" class="fill-current v-base" aria-label="External Link"><path d="M25.152 16.576v5.696q0 2.144-1.504 3.648T20 27.424H5.152q-2.144.0-3.648-1.504t-1.504-3.648V7.424q0-2.112 1.504-3.616t3.648-1.536h12.576q.224.0.384.16t.16.416V4q0 .256-.16.416t-.384.16H5.152q-1.184.0-2.016.832t-.864 2.016v14.848q0 1.184.864 2.016t2.016.864H20q1.184.0 2.016-.864t.832-2.016v-5.696q0-.256.16-.416t.416-.16h1.152q.256.0.416.16t.16.416zM32 1.152v9.12q0 .48-.352.8t-.8.352-.8-.352l-3.136-3.136-11.648 11.648q-.16.192-.416.192t-.384-.192l-2.048-2.048q-.192-.16-.192-.384t.192-.416L24.064 5.088l-3.136-3.136q-.352-.352-.352-.8t.352-.8.8-.352h9.12q.48.0.8.352t.352.8z"/></svg>
+<a href=http://119.80.10.68:14180/ui/ class="link black dim">
+点击进入流影DEMO<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" viewBox="0 0 32 32" class="fill-current v-base" aria-label="External Link"><path d="M25.152 16.576v5.696q0 2.144-1.504 3.648T20 27.424H5.152q-2.144.0-3.648-1.504t-1.504-3.648V7.424q0-2.112 1.504-3.616t3.648-1.536h12.576q.224.0.384.16t.16.416V4q0 .256-.16.416t-.384.16H5.152q-1.184.0-2.016.832t-.864 2.016v14.848q0 1.184.864 2.016t2.016.864H20q1.184.0 2.016-.864t.832-2.016v-5.696q0-.256.16-.416t.416-.16h1.152q.256.0.416.16t.16.416zM32 1.152v9.12q0 .48-.352.8t-.8.352-.8-.352l-3.136-3.136-11.648 11.648q-.16.192-.416.192t-.384-.192l-2.048-2.048q-.192-.16-.192-.384t.192-.416L24.064 5.088l-3.136-3.136q-.352-.352-.352-.8t.352-.8.8-.352h9.12q.48.0.8.352t.352.8z"/></svg>
 </a>
 </p></div></div></div></section><section class="w-100 ph4 ph5-ns pt4 pb5 mid-gray bg-primary-color-light bb bt b--light-gray"><div class="w-100 center pt5">
 <div class="w-100 w-40-l tc center">
@@ -185,7 +185,7 @@ Improve the Modules<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://w
 <div class="b f3 light-gray mb3 nested-links tc">
 流影由 <a href=https://github.com/orgs/Abyssal-Fish-Technology class=link>深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与和使用反馈<br>
 </div><ul class="center f6 list ma0 mv4 pa0 tc">
-<li class="dib mr3"><img src=/images/wx_public.jpg alt=关注微信公众号 width=100 height=100> </li><li class="dib mr3 white"> 公众号 </li><li class="dib mr3 white"> 沟通群 </li><li class="dib mr3"><img src=/images/wx_group.png alt=微信群 width=100 height=100></li></ul><ul class="center f6 list ma0 mv4 pa0 tc">
+<li class="dib mr3"><img src=/images/wx_public.jpg alt=关注微信公众号 width=100 height=100> </li></ul><ul class="center f6 list ma0 mv4 pa0 tc">
 <li class="dib mr3"><a href=https://github.com/Abyssal-Fish-Technology/ly_vis class="dim link light-gray pv2">可视化交互分析(ly_vis)</a></li><li class="dib mr3"><a href=https://github.com/Abyssal-Fish-Technology/ly_server class="dim link light-gray pv2">管理引擎(ly_server)</a></li><li class=dib><a href=https://github.com/Abyssal-Fish-Technology/ly_analyser class="dim link light-gray pv2">分析引擎(ly_analyser)</a></li><li class=dib><a href=https://github.com/Abyssal-Fish-Technology/ly_probe class="dim link light-gray pv2"> &nbsp;&nbsp;&nbsp;&nbsp;流量探针(ly_probe)</a></li></ul><ul class="center f6 list ma0 mv3 pa0 tc"><li class="dib mr3"><a href=https://github.com/abyssalfish-os/liuying/issues/new class="dim link light-gray pv2">到 Github 发起 Issue</a></li><li class=dib><a href=https://gitter.im/abyssalfish-os/community class="dim link light-gray pv2">来 Gitter 沟通留言</a></li></ul></div></div><div class="bg-primary-color-dark bottom-0 left-0 right-0 dn-l fixed pb3 ph3 pt3 z-2"><div class="globalmenu mobilemenu pb1 dn">
 <ul class="list hidden dib ph0 scrolling-touch tc">
 <li class="tl dib ma0 hover-bg-black w-100">
